Refactoring. Bug fixes:
*Fixed auto-generate null error on non numeric url
*Fixed depth issue caused by overlapping auto-generate button

--- a/options/options.css
+++ b/options/options.css
@@ -11,6 +11,10 @@
 	margin-bottom: 15px;
 }
 
+.input-group{
+	z-index: 0;
+}
+
 .shortcut-row{
 }
 
